EPSCI-217: Add parent category for Oil and Gas in project information (#65)